Solved an issue that caused divs to overflow. Images, buttons, and comments now seem to be correctly positioned but not styled

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ main {
   background: #84ACCE;
   text-align: center;
   padding: 4em 0;
+  overflow: auto;
 }
 
 .summary {
@@ -75,15 +76,30 @@ main {
 }
 
 .images {
-  position: relative;
+  overflow: auto;
   width: 25%;
+  height: 400px;
   float: left;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .posters {
-  margin-top: 50px;
-  margin-left: 40px;
+  /* margin-top: 50px;
+  margin-left: 40px; */
+  margin: auto;
   width: 200px;
   height: 300px;
   /* float: left; */
+}
+
+.commentBtn {
+  display: block;
+  margin: auto;
+  background-color: #D7D9B1;
+  border: none;
+  border-radius: 4px;
+  width: 100px;
+  height: 40px;
+  color: white;
 }
